added semantic html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,43 @@
 
 <!-- TELL PHONES NOT TO LIE ABOUT WIDTHS -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+	<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<script>
+	src="http://css.3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js">
+	</script>
+<![endif]-->
 	</head>
 
 	<body>
+
+		<div id='headerWrapper'>
+		<header>
+		<h1> Ladd Mauigoa </h1>
+		<h2> Welcome Everyone </h2>
+		</header>
+		</div> <!-- end of the header wrapper-->
+
+		<div id='navWrapper' >
+		<nav>
+		<button id='showPhoneNav'> Show Navigation </button>
+			<ul id='myNav' class='clearfix'>
+				<li class='active'><a href='index.html'>HOME</a></li>
+				<li><a href='projects.html'>PROJECTS</a></li>
+				<li><a href='hobbies.html'>HOBBIES</a></li>
+				<li><a href='contact.html'>CONTACT</a></li>
+			</ul>
+		</nav>
+		</div> <!-- end of the navigation wrapper -->
+
+		<div id='footerWrapper'>
+		<footer>
+		<div>
+			<p>Laddmauigoa.com</p>
+		</div>
+		</footer>
+		</div> <!-- end of the footer wrapper-->
 		
 
 
