added photos and css

--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@
 		</header>
 		</div> <!-- end of the header wrapper-->
 
+		<div id='banner'></div>
+
 		<div id='navWrapper' >
 		<nav>
 		<button id='showPhoneNav'> Show Navigation </button>
