added more styling and images

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,9 @@
 		</header>
 		</div> <!-- end of the header wrapper-->
 
+		<div class='bannerContainer'>
 		<div id='banner'></div>
+		</div>
 
 		<div id='navWrapper' >
 		<nav>
