fixed the lists and added more templates

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 		<div id='navWrapper' >
 		<nav>
 			<ul id='myNav' class='clearfix'>
-				<li class='active'><a href='/#/'>HOME</a></li>
+				<li><a href='/#/'>HOME</a></li>
 				<li><a href='/#/projects'>PROJECTS</a></li>
 				<li><a href='/#/hobbies'>HOBBIES</a></li>
 				<li><a href='/#/contact'>CONTACT</a></li>
